Prepare the 1.4.5 release

--- a/README
+++ b/README
@@ -2,12 +2,12 @@ To use the HTML Minification for Razor, you have to change your Views/Web.config
 
 <configuration>
   <system.web.webPages.razor>
-    <host factoryType="Meleze.Web.Razor.MinifyHtmlWebRazorHostFactory, Meleze.Web, Version=1.4.0.4, Culture=neutral, PublicKeyToken=0a868b5321967eda" />
+    <host factoryType="Meleze.Web.Razor.MinifyHtmlWebRazorHostFactory, Meleze.Web, Version=1.4.0.5, Culture=neutral, PublicKeyToken=0a868b5321967eda" />
   </system.web.webPages.razor>
 </configuration>
 
 For ASP.NET MVC 3.0, use the 1.3 version of Meleze:
-    <host factoryType="Meleze.Web.Razor.MinifyHtmlWebRazorHostFactory, Meleze.Web, Version=1.3.0.4, Culture=neutral, PublicKeyToken=0a868b5321967eda" />
+    <host factoryType="Meleze.Web.Razor.MinifyHtmlWebRazorHostFactory, Meleze.Web, Version=1.3.0.5, Culture=neutral, PublicKeyToken=0a868b5321967eda" />
 
 There are two versions of the DLL: one for ASP.NET MVC3 and another for ASP.NET MVC4. Make sur to use the correct version (it is displayed in the DLL description).
 
@@ -35,6 +35,10 @@ There is also a NuGet package to setup the Minifier automatically in your applic
 You can find more details in http://cestdumeleze.net/blog/2011/minifying-the-html-with-asp-net-mvc-and-razor/
 
 RELEASE NOTES:
+- 1.4.5 and 1.3.5 (10/11/2013)
+    - Fix integration with System.Web.Optimization
+    - Add minification of the Razor sections
+
 - 1.4.4 and 1.3.4 (30/08/2013)
     - Fix bugs with the detection of Javascript // comments.
     - Minify the inline JS and CSS with the System.Web.Optimization if it is available.
